--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -4,8 +4,8 @@
 	},
 	"rules": {
 		"react/require-default-props": 0,
-		"indent": [2, "tab"],
-		"no-tabs": 0,
+		// "indent": [2, "tab"],
+		// "no-tabs": 0,
 		"react/jsx-indent": 0,
 		"react/jsx-filename-extension": 0,
 		"react/jsx-props-no-spreading": 0
